# OpenCV5.x-image-processing

./: README.md  getcv2pictures.py  mycv2service.py  yolov5_pose_opencv5x.cpp
OpenCV5.x-gapi/: README.md  run.sh
OpenCV5.x-gapi/sobel/: CMakeLists.txt  main.cpp
OpenCV5.x-gapi/sobel-gapi/: CMakeLists.txt  main.cpp
